fix: Modal z-index 수정

--- a/public/js/components/Modal/style.css
+++ b/public/js/components/Modal/style.css
@@ -8,7 +8,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(1, 1, 1, 0.4);
-  z-index: 10;
+  z-index: var(--z-index-modal);
 }
 
 #modal.open {
